--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
+
 <body>
-<div id="app">
+
+<div id="app" v-cloak>
+
   <div class="header">
     <h1>Vue.js Poster Store</h1>
 
@@ -33,17 +36,17 @@
 
       <div class="search-results">
         <div v-if="lastSearch && !loading">
-          Found {{ stock.length }} results for search term {{ lastSearch }}
+          Found {{ fullStock.length }} results for search term {{ lastSearch }}
         </div>
         <div v-if="loading">
           Searching for {{ search }} ....
         </div>
-        <div v-else-if="!stock.length">
+        <div v-else-if="!visibleStock.length">
           Search for a product
         </div>
       </div>
 
-      <div class="product" v-for="(item, index) in stock">
+      <div class="product" v-for="(item, index) in visibleStock">
         <div>
           <div class="product-image">
             <img :src="item.link" alt="imgur picture">
@@ -60,12 +63,20 @@
         </div>
       </div>
 
+      <div id="product-list-bottom">
+        <div v-if="moreItems">More ...</div>
+        <div v-else>No more items</div>
+      </div>
+
     </div>
 
+
     <div class="cart">
+
       <h2>Shopping Cart</h2>
-      <ul>
-        <li class="cart-item" v-for="item in cart">
+
+      <transition-group name="fade" tag="ul">
+        <li class="cart-item" v-for="item in cart" :key="item.id">
           <div class="item-title">
             {{ item.title }}
           </div>
@@ -73,12 +84,14 @@
           <button class="btn" @click="addItem(item.id)">+</button>
           <button class="btn" @click="addItem(item.id, 'minus')">-</button>
         </li>
-      </ul>
+      </transition-group>
 
-      <div v-if="total">
-        <div>Total: {{ total | currency }}</div>
-      </div>
-      <div v-else class="empty-cart">Cart is empty</div>
+      <transition name="fade">
+        <div v-if="total">
+          <div>Total: {{ total | currency }}</div>
+        </div>
+      </transition>
+      <div v-if="!total" class="empty-cart">Cart is empty</div>
     </div>
   </div>
 
@@ -88,6 +101,7 @@
 <script src="reload/reload.js"></script>
 <script src="node_modules/vue/dist/vue.js"></script>
 <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
